# VRM-Addon-for-Blender

./: .actrc  .clang-format  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .prettierignore  .prettierrc.yml  .pylintrc  .pylintrc.ci  .release-please-manifest.json  .trivyignore  CHANGELOG.md  LICENSE  LICENSE_(OPTION1)_MIT.txt  LICENSE_MAIN.txt  Notice.txt  README.md  V_Types.py  __init__.py  animation.blend  benchmark_after.txt  benchmark_before.txt  blender  deno.jsonc  dictionary.txt  extension.patch  extension_userpref.blend  gl_const.py  gl_constants.py  index.html  matcap.txt  mypy.ini  package-lock.json  package.json  pyproject.toml  (+7 more)
.devcontainer/: Dockerfile  debian.sources.patch  devcontainer-lock.json  devcontainer.json
.githooks/: pre-commit
.github/: actionlint.yaml  dependabot.yml  renovate.json5
benchmarks/: README.md  benchmark_look_at_preview_update_task.py  benchmark_look_at_preview_updater.py  benchmark_many_bone_assignment.py  benchmark_mtoon1_auto_setup.py  benchmark_outline_update_task.py  benchmark_outline_updater.py  benchmark_spring_bone.py  benchmark_spring_bone_assignment.py  benchmark_spring_bone_many_springs.py  benchmark_vrm0_export.py  benchmark_vrm0_import.py  benchmark_vrm1_export.py  benchmark_vrm1_import.py  benchmark_vrm_import.py  pyproject.toml  ruff.toml
benchmarks/.codspeed/: results_1759672597390.json  results_1759672668801.json
benchmarks/src/io_scene_vrm_benchmarks/: expression_preview_benchmark_test.py  look_at_preview_updater_benchmark_test.py  many_bone_assignment_benchmark_test.py  mtoon1_auto_setup_benchmark_test.py  nop_test.py  outline_updater_benchmark_test.py  pytest_cleanup_benchmark_test.py  spring_bone_assignment_benchmark_test.py  spring_bone_benchmark_test.py  spring_bone_many_springs_benchmark_test.py  stop_hung_main_process_test.py  structure_based_mapper_benchmark_test.py  util.py  vrm0_export_benchmark_test.py  vrm0_import_benchmark_test.py  vrm1_export_benchmark_test.py  vrm1_import_benchmark_test.py
css/: main.bundle.min.04597c2390852e6472cbc8146c302099831a663f4a6d047b39c80d1133406615008dbb5bc0455bab9bfe66a69161d1bcd27b54b9d554058a468079f3944e3cdc.css  (+5 more)
debug/: 2_20_72.tar.xz
docs/: api-examples.md  index.md  markdown-examples.md  spec.pptx
en/: 404.html  index.html  index.xml  (+1 more)
typings/: README.md  pyproject.toml
typings/addon_utils-stubs/: __init__.pyi
typings/bgl-stubs/: __init__.pyi
typings/bmesh-stubs/: __init__.pyi  ops.pyi  types.pyi
typings/bmesh-stubs/ops/: __init__.pyi
typings/bmesh-stubs/types/: __init__.pyi
typings/bpy-stubs/: __init__.pyi  msgbus.pyi  props.pyi  types.pyi  utils.pyi
typings/bpy-stubs/app/: __init__.pyi  handlers.pyi  timers.pyi  translations.pyi
typings/bpy-stubs/app/handlers/: __init__.pyi
typings/bpy-stubs/app/timers/: __init__.pyi
typings/bpy-stubs/app/translations/: __init__.pyi
typings/bpy-stubs/context/: __init__.pyi
typings/bpy-stubs/context/preferences/: __init__.pyi
typings/bpy-stubs/context/preferences/view/: __init__.pyi
typings/bpy-stubs/msgbus/: __init__.pyi
typings/bpy-stubs/ops/: __init__.pyi  export_scene.pyi  import_scene.pyi  mesh.pyi  object.pyi  preferences.pyi  render.pyi  wm.pyi
typings/bpy-stubs/ops/ed/: __init__.pyi
typings/bpy-stubs/ops/export_scene/: __init__.pyi
typings/bpy-stubs/ops/icyp/: __init__.pyi
typings/bpy-stubs/ops/import_scene/: __init__.pyi
typings/bpy-stubs/ops/mesh/: __init__.pyi
typings/bpy-stubs/ops/object/: __init__.pyi
typings/bpy-stubs/ops/outliner/: __init__.pyi
typings/bpy-stubs/ops/preferences/: __init__.pyi
typings/bpy-stubs/ops/uv/: __init__.pyi
typings/bpy-stubs/ops/vrm/: __init__.pyi
typings/bpy-stubs/ops/wm/: __init__.pyi
typings/bpy-stubs/path/: __init__.pyi
typings/bpy-stubs/props/: __init__.pyi
typings/bpy-stubs/types/: __init__.pyi
typings/bpy-stubs/utils/: __init__.pyi
typings/bpy_extras-stubs/: __init__.pyi  io_utils.pyi  node_shader_utils.pyi  view3d_utils.pyi
typings/bpy_extras-stubs/io_utils/: __init__.pyi
typings/bpy_extras-stubs/node_shader_utils/: __init__.pyi
typings/bpy_extras-stubs/view3d_utils/: __init__.pyi
typings/gpu-stubs/: __init__.pyi  types.pyi
typings/gpu-stubs/types/: __init__.pyi
typings/gpu_extras-stubs/: __init__.pyi
typings/gpu_extras-stubs/batch/: __init__.pyi
typings/idprop-stubs/: __init__.pyi
typings/idprop-stubs/types/: __init__.pyi
typings/io_scene_gltf2-stubs/blender/com/: gltf2_blender_extras.pyi
typings/io_scene_gltf2-stubs/blender/exp/: gltf2_blender_gather_materials.pyi  gltf2_blender_image.pyi
typings/io_scene_gltf2-stubs/blender/exp/material/: encode_image.pyi  gltf2_blender_gather_materials.pyi  materials.pyi
typings/io_scene_gltf2-stubs/blender/exp/material/extensions/: gltf2_blender_image.pyi
typings/io_scene_gltf2-stubs/io/com/: gltf2_io.pyi  gltf2_io_debug.pyi
typings/mathutils-stubs/: __init__.pyi
typings/src/bpy-stubs/: path.pyi  props.pyi  types.pyi  utils.pyi
typings/src/bpy-stubs/app/: __init__.pyi  handlers.pyi  timers.pyi
typings/src/bpy-stubs/ops/: __init__.pyi  mesh.pyi  object.pyi  outliner.pyi  pose.pyi  preferences.pyi  scene.pyi  uv.pyi  wm.pyi
typings/src/bpy_extras-stubs/: view3d_utils.pyi
typings/src/gpu-stubs/: __init__.pyi  types.pyi
typings/src/gpu_extras-stubs/: __init__.pyi
typings/src/idprop-stubs/: types.pyi
typings/src/io_scene_gltf2-stubs/blender/com/: extras.pyi
typings/src/io_scene_gltf2-stubs/blender/exp/: gltf2_blender_gather_materials.pyi
typings/src/io_scene_gltf2-stubs/blender/exp/material/: encode_image.pyi  gltf2_blender_gather_materials.pyi  materials.pyi
typings/src/io_scene_gltf2-stubs/blender/exp/material/extensions/: gltf2_blender_image.pyi
typings/src/io_scene_gltf2-stubs/blender/imp/: gltf2_blender_vnode.pyi  vnode.pyi
typings/src/io_scene_gltf2-stubs/io/com/: debug.pyi  gltf2_io.pyi
typings/src/io_scene_gltf2-stubs/io/imp/: gltf2_io_gltf.pyi
typings/src/mathutils-stubs/: __init__.pyi
typings/src/requests-stubs/: README.txt  __init__.pyi
(+930 files in other folders)
