[project]
name = "io_scene_vrm"
requires-python = "==3.10.*" # I actually want to use 3.9, but bpy 3.6.* doesn't allow it.
version = "3.8.0"
authors = [
  {name = "Isamu Mogi"},
  {name = "iCyP"},
]
license = {text = "SPDX-License-Identifier: MIT OR GPL-3.0-or-later"}

dependencies = [
  # https://github.com/saturday06/VRM-Addon-for-Blender/blob/v2.40.0/uv.lock#L23-L26
  "bpy == 3.6.*; platform_system == 'Darwin' and platform_machine == 'x86_64'",
  "bpy == 3.6.*; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "bpy == 3.6.*; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "bpy == 3.6.*; platform_system == 'Windows' and platform_machine == 'AMD64'",
]

[tool.ty.environment]
root = ["src"]

[tool.uv]
dev-dependencies = [
  "codespell ==2.4.1",
  "mypy ==1.17.0",
  "pygit2 ==1.18.0",
  "pyrefly ==0.24.2",
  "requests ==2.32.4",
  "ruff ==0.12.3",
  "starry-bpy-typings",
  "tqdm ==4.67.1",
  "ty ==0.0.1a14",
  "types-pygit2 ==1.15.0.20250319",
  "types-tqdm ==4.67.0.20250516",
]

[tool.uv.sources]
starry-bpy-typings = {path = "typings"}

[tool.ruff]
target-version = "py39" # It overrides 'project.requires-python = "== 3.10.*"'
src = ["typings", "src"]

[tool.ruff.lint]
allowed-confusables = [
  "\u30ce", # Katakana Letter No
]
select = ["ALL"]
ignore = [
  # ----- fixing -----

  "FBT003", # Boolean positional value in function call

  # ----- ignored -----

  # `COM812` may cause conflicts when used with the formatter in Ruff 0.1.6
  "COM812", # Trailing comma missing

  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in `__init__`
  "ERA001", # Found commented-out code

  # devcontainer for windows hosts doesn't set executable permissions properly.
  "EXE002", # The file is executable but no shebang is present

  # https://projects.blender.org/blender/blender/issues/63713
  "FA100", # Missing `from __future__ import annotations`, but uses `x`

  "FIX002", # Line contains TODO, consider resolving the issue

  # `ISC001` may cause conflicts when used with the formatter in Ruff 0.1.6
  "ISC001", # Implicitly concatenated string literals on one line

  "ISC003", # Explicitly concatenated string should be implicitly concatenated
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PLC0415", # `import` should be at the top-level of a file
  "PLR2004", # Magic value used in comparison, consider replacing 3 with a constant variable

  # pytest is not currently used.
  "PT", # flake8-pytest-style

  "RET504", # Unnecessary assignment to `x` before `return` statement

  # SIM118 does not handle `bpy_prop_collection` correctly.
  "SIM118", # Use `key not in dict` instead of `key not in dict.keys()`

  "TC001", # Move application import `x` into a type-checking block
  "TC002", # Move third-party import `x` into a type-checking block
  "TC003", # Move standard library import `x` into a type-checking block
  "TD002", # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
  "TD003", # Missing issue link on the line following this TODO

  # https://projects.blender.org/blender/blender-manual/src/commit/585cc1a5eab811052ea4dda176dfce057cb6ad69/manual/advanced/extensions/addons.rst?display=source#L174-L183
  "TID252", # Relative imports from parent modules are banned
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
  "glTF2ExportUserExtension",
  "glTF2ImportUserExtension",
  "EXPORT_SCENE_OT_*",
  "IMPORT_SCENE_OT_*",
  "ICYP_OT_*",
  "VRM_FH_*",
  "VRM_OT_*",
  "VRM_PT_*",
  "VRM_UL_*",
  "WM_OT_*",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 215

[tool.ruff.lint.pylint]
max-args = 19
max-branches = 214
max-returns = 25
max-statements = 550

[tool.codespell]
ignore-regex = ".* # codespell-ignore"

[tool.mypy]
python_version = "3.9" # It overrides 'project.requires-python = "== 3.10.*"'
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings:$MYPY_CONFIG_FILE_DIR/src"
strict = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.black]
extend-exclude = ".*" # Please use Ruff instead.

[tool.isort]
extend_skip_glob = ["*"] # Please use Ruff instead.

[tool.pylint.main]
ignore-paths = "." # Please use Ruff instead.

[tool.pyright]
pythonVersion = "3.9" # It overrides 'project.requires-python = "== 3.10.*"'
pythonPlatform = "All"
typeCheckingMode = "strict"
exclude = [
  # Too many files in Unity folders, causing
  # 'Enumeration of workspace source files is taking longer than 10 seconds.'
  # warning, so explicitly excluding them
  "tests/resources/unity",

  # Re-setting default exclusion folder settings since they get lost
  # https://github.com/microsoft/pyright/blob/1.1.400/packages/pyright-internal/src/analyzer/service.ts#L793
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]

reportMissingModuleSource = false
reportCallInDefaultInitializer = true
reportShadowedImports = true

[tool.pyrefly]
search-path = [
  "typings",
  "src",
]
project-excludes = [
  "node_modules/**",

  # Re-setting default exclusion settings since they get lost
  # https://github.com/facebook/pyrefly/blob/0.20.2/website/docs/configuration.mdx?plain=1#L129
  "**/.[!/.]*",
  "**/*venv/**",
]
python-version = "3.9.0" # It overrides 'project.requires-python = "== 3.10.*"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
