[project]
name = "io-scene-vrm-benchmarks"
version = "3.26.8"
readme = "README.md"
requires-python = "==3.10.*" # I actually want to use 3.9, but bpy 3.6.* doesn't allow it.
dependencies = [
  "io-scene-vrm",
  "pytest",
  "pytest-benchmark",
  "pytest-codspeed",

  "bpy ==5.1.*; python_version == '3.13.*' and platform_machine == 'arm64' and sys_platform == 'darwin'",
  "bpy ==5.1.*; python_version == '3.13.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
  "bpy ==5.1.*; python_version == '3.13.*' and platform_machine == 'AMD64' and sys_platform == 'win32'",
  "bpy ==5.1.*; python_version == '3.13.*' and platform_machine == 'ARM64' and sys_platform == 'win32'",
]

[tool.uv.sources]
io-scene-vrm = {workspace = true}

[tool.ruff]
target-version = "py39" # It overrides 'project.requires-python = "== 3.10.*"'
extend = "../pyproject.toml"

[tool.ruff.lint]
extend-ignore = [
  "S101", # Use of `assert` detected
  "S603", # `subprocess` call: check for execution of untrusted input
]

[tool.pyright]
pythonVersion = "3.9" # It overrides 'project.requires-python = "== 3.10.*"'
pythonPlatform = "All"
typeCheckingMode = "strict"

reportMissingModuleSource = false
reportCallInDefaultInitializer = true

[tool.pytest]
testpaths = ["src"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
