[project]
name = "starry-bpy-typings"
version = "3.14.0"
readme = "README.md"

[tool.uv.build-backend]
module-name = [
  "addon_utils-stubs",
  "bgl-stubs",
  "bmesh-stubs",
  "bpy-stubs",
  "bpy_extras-stubs",
  "gpu-stubs",
  "gpu_extras-stubs",
  "io_scene_gltf2-stubs",
  "idprop-stubs",
  "mathutils-stubs",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint]
extend-ignore = [
  # ----- ignored -----

  "A001", # Variable `x` is shadowing a Python builtin
  "A002", # Argument `x` is shadowing a Python builtin
  "A004", # Import `x` is shadowing a Python builtin
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "N801", # Class name `x` should use CapWords convention
  "N802", # Function name `X` should be lowercase
]

[tool.ruff.lint.pylint]
max-args = 80

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
